--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.16.0",
     "lodash": "^4.16.4",
+    "node-env-file": "^0.1.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
