--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-env-file": "^0.1.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-google-maps": "^4.7.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-sparklines": "^1.6.0",
